# socket_manager

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  justfile  rust-toolchain.toml  socket_manager-config-version.cmake.in  socket_manager-config.cmake  toolchain.cmake  update-alternatives-clang.sh
.circleci/: config.yml
.github/workflows/: Build-Dev-Container.yml  PR-debug.yml  PR.yml  Push-Dev-Container.yml  codeql.yml
dockerfile/: build.sh
dockerfile/dev-containers/: llvm.sh
dockerfile/dev-containers/debian-10/: Dockerfile
dockerfile/dev-containers/debian-11/: Dockerfile
dockerfile/dev-containers/debian-12/: Dockerfile
dockerfile/dev-containers/focal/: Dockerfile
dockerfile/dev-containers/jammy/: Dockerfile
examples/echo_server/: .clangd  CMakeLists.txt  README.md  justfile
examples/echo_server/src/: echo_server.cpp  echo_server.h
include/: msg_sender.cc  msg_sender.h  socket_manager.cc  socket_manager.h  socket_manager_c_api.h
include/socket_manager/: conn_callback.h  connection.h  msg_receiver.h  msg_sender.h  recv_waker.h  send_waker.h  socket_manager.h
include/socket_manager/common/: notifier.h  waker.h
socket_manager/: CMakeLists.txt  connection.cc  error.h  msg_receiver.cc  msg_sender.cc  recv_waker.cc  socket_manager.cc  socket_manager_c_api.cc  waker.cc
src/: buf_read_write.rs  c.rs  conn.rs  conn_handle.rs  lib.rs  msg_sender.rs  read.rs  utils.rs  write.rs
src/c_api/: callbacks.rs  conn_events.rs  connection.rs  extern_c.rs  ffi.rs  mod.rs  msg_sender.rs  on_conn.rs  on_msg.rs  recv_waker.rs  socket_manager.rs  structs.rs  tracer.rs  utils.rs  waker.rs
src/c_api/async_api/: mod.rs  notifier.rs  waker.rs
src/c_api/async_ffi/: mod.rs  notifier.rs  waker.rs
tests/: CMakeLists.txt  lightweightsemaphore.h  test_abort_join.cpp  test_auto_flush.cpp  test_bad_address_connect.cpp  test_bad_address_listen.cpp  test_callback_throw_error.cpp  test_drop_sender.cpp  test_error_call_after_abort.cpp  test_error_connect.cpp  test_error_listen.cpp  test_error_send_after_closed.cpp  test_error_twice_start.cpp  test_hello_world_greetings.cpp  test_manual_flush.cpp  test_multiple_connections.cpp  test_transfer_data_large.cpp  test_transfer_data_large_async.cpp  test_transfer_data_large_block.cpp  test_transfer_data_large_busy.cpp  test_transfer_data_large_manual_flush.cpp  test_transfer_data_large_no_flush.cpp  test_transfer_data_large_nonblock.cpp  test_transfer_data_mid.cpp  test_transfer_data_mid_async.cpp  test_transfer_data_mid_block.cpp  test_transfer_data_mid_manual_flush.cpp  test_transfer_data_mid_no_flush.cpp  test_transfer_data_mid_nonblock.cpp  test_transfer_data_small.cpp  test_transfer_data_small_async.cpp  test_transfer_data_small_block.cpp  test_transfer_data_small_busy.cpp  test_transfer_data_small_manual_flush.cpp  test_transfer_data_small_no_flush.cpp  test_transfer_data_small_nonblock.cpp  test_utils.h  transfer_common.h
tests/test_find_package/: CMakeLists.txt  helloworld_server.cpp
