cmake_minimum_required(VERSION 3.9)
project(socket_manager LANGUAGES C CXX VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 14)

SET(CMAKE_C_FLAGS "-Wall -std=c99")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_MINSIZEREL "-Os -DNDEBUG -flto=full")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG -flto=full")
SET(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -flto=full")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -flto=full")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")

if (APPLE)
    SET(CMAKE_C_COMPILER   $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/clang)
    SET(CMAKE_CXX_COMPILER $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/clang++)
    SET(CMAKE_AR           $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/llvm-ar)
    SET(CMAKE_LINKER       $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/llvm-ld)
    SET(CMAKE_NM           $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/llvm-nm)
    SET(CMAKE_OBJDUMP      $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/llvm-objdump)
    SET(CMAKE_RANLIB       $ENV{HOMEBREW_PREFIX}/opt/llvm/bin/llvm-ranlib)
elseif (LINUX)
    SET(CMAKE_C_COMPILER    /usr/bin/clang)
    SET(CMAKE_CXX_COMPILER  /usr/bin/clang++)
    SET(CMAKE_AR            /usr/bin/llvm-ar)
    SET(CMAKE_LINKER        /usr/bin/llvm-ld)
    SET(CMAKE_NM            /usr/bin/llvm-nm)
    SET(CMAKE_OBJDUMP       /usr/bin/llvm-objdump)
    SET(CMAKE_RANLIB        /usr/bin/llvm-ranlib)
endif ()

set(include_dest "include/${PROJECT_NAME}-${PROJECT_VERSION}")
set(main_lib_dest "lib/${PROJECT_NAME}-${PROJECT_VERSION}")

set(Rust_TOOLCHAIN "nightly" CACHE STRING "requires nightly")

add_subdirectory(${CMAKE_SOURCE_DIR}/corrosion)
corrosion_import_crate(MANIFEST_PATH Cargo.toml)

add_subdirectory(socket_manager)

option(PACKAGE_TESTS "Build the tests" ON)
if (PACKAGE_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif ()
