[package]
name = "tokio-socket-manager"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
dashmap = { version = "5.4.0", features = ["inline"] }
libc = "0.2.146"
socket2 = "0.5.3"

[dependencies.async-ringbuf]
git = "https://github.com/Congyuwang/ringbuf.git"

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["rt", "rt-multi-thread", "net", "time", "sync", "io-util", "macros", "parking_lot"]

[dependencies.futures]
version = "0.3.28"
default-features = false
features = ["async-await"]

[dependencies.tracing]
version = "0.1.37"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "fmt", "env-filter", "registry"]
