[package]
name = "tokio-socket-manager"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
dashmap = { version = "5.4.0", features = ["inline"] }
async-ringbuf = "0.2.0-rc.5"

[dependencies.tokio]
version = "1.36.0"
default-features = false
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "io-util",
    "macros",
    "parking_lot",
]

[dependencies.tracing]
version = "0.1.37"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "fmt", "env-filter", "registry"]
