[package]
name = "tokio-socket-manager"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
dashmap = { version = "6", features = ["inline"] }
async-ringbuf = "0.3.1"

[dependencies.tokio]
version = "1.37"
default-features = false
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "io-util",
    "macros",
    "parking_lot",
]

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["std", "fmt", "env-filter", "registry"]
